--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,80 @@
-# Python 3.10
+alembic==1.9.1
+aniso8601==9.0.1
+apispec==6.0.2
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+bidict==0.22.1
+blinker==1.5
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+comm==0.1.2
+cryptography==39.0.0
+debugpy==1.6.4
+decorator==5.1.1
+entrypoints==0.4
+executing==1.2.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
 flask-marshmallow==0.14.0
 Flask-Migrate==4.0.0
-Flask-RESTful==0.3.9
+Flask-MQTT==1.1.1
+Flask-Principal==0.4.0
+flask-restplus==0.13.0
 Flask-Script==2.0.5
+flask-smorest==0.40.0
+Flask-SocketIO==5.3.2
 Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
+idna==3.4
+ipykernel==6.19.2
+ipython==8.7.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter_client==7.4.8
+jupyter_core==5.1.0
+Mako==1.2.4
+MarkupSafe==2.1.1
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.28.1
+matplotlib-inline==0.1.6
+msal==1.20.0
+nest-asyncio==1.5.6
+packaging==22.0
+paho-mqtt==1.6.1
+parso==0.8.3
+passlib==1.7.4
+pickleshare==0.7.5
+platformdirs==2.6.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
 psycopg2==2.9.5
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.13.0
+PyJWT==2.6.0
+pyrsistent==0.19.3
 python-dotenv==0.21.0
+python-engineio==4.3.4
+python-socketio==5.7.2
+pytz==2022.7
+pywin32==305
+pyzmq==24.0.1
+requests==2.28.1
+six==1.16.0
 SQLAlchemy==1.4.45
-flask-jwt-extended  
-passlib
+stack-data==0.6.2
+tornado==6.2
+traitlets==5.7.1
+urllib3==1.26.13
+wcwidth==0.2.5
+webargs==8.2.0
+Werkzeug==2.2.2
+wincertstore==0.2
