--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,81 @@
+# Git
+.git
+.gitignore
+
+# Github
+.github/
+*/.github/
+
+# Marckdown
+*.md
+
+# CI
+.codeclimate.yml
+.travis.yml
+.taskcluster.yml
+
+# Docker
+docker-compose.yml
+.docker
+Dockerfile*
+.dockerignore
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
+
+# OpenSSL-related files best not committed
+
+## Certificate Authority
+*.ca
+
+## Certificate
+*.crt
+
+## Certificate Sign Request
+*.csr
+
+## Certificate
+*.der
+
+## Key database file
+*.kdb
+
+## OSCP request data
+*.org
+
+## PKCS #12
+*.p12
+
+## PEM-encoded certificate data
+*.pem
+
+## Random number seed
+*.rnd
+
+## SSLeay data
+*.ssleay
+
+## S/MIME message
+*.smime
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
+**/__pycache__/
+*/*/__pycache__/
+*/*/*/__pycache__/
+*/*/*/*/__pycache__/
 *.py[cod]
+**/*.py[cod]
+*/*/*.py[cod]
+*/*/*/*.py[cod]
 *$py.class
 
 # C extensions
@@ -8,54 +83,57 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
 sdist/
 var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
+*.egg
+.eggs/
+wheels/
+share/python-wheels/
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Pipenv
+Pipfile
+Pipfile.lock
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+# tests/
 htmlcov/
 .tox/
-.nox/
 .coverage
-.coverage.*
 .cache
+nosetests.xml
+coverage.xml
+.nox/
+.coverage.*
 nosetests.xml
 coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
 *.pot
 
 # Django stuff:
-*.log
+**/*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -67,11 +145,12 @@ instance/
 # Scrapy stuff:
 .scrapy
 
+# PyBuilder
+.pybuilder/
+target/
+
 # Sphinx documentation
 docs/_build/
-
-# PyBuilder
-target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -80,12 +159,6 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-.python-version
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
@@ -93,18 +166,30 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environment variable
-# .env
-# .env*
-
-# Environments
-.venv/
+# Virtual environment
+.env
+.env*
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# PyCharm
+.idea
+
+# Python mode for VIM
+.ropeproject
+*/.ropeproject
+*/*/.ropeproject
+*/*/*/.ropeproject
+
+# Vim swap files
+*.swp
+*/*.swp
+*/*/*.swp
+*/*/*/*.swp
 
 # Spyder project settings
 .spyderproject
@@ -123,6 +208,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
 
 # It's better to unpack these files and commit the raw source because
 # git has its own built in compression methods.
@@ -167,45 +258,8 @@ dmypy.json
 # GPG
 secring.*
 
-# OpenSSL-related files best not committed
-## Certificate Authority
-*.ca
-
-## Certificate
-*.crt
-
-## Certificate Sign Request
-*.csr
-
-## Certificate
-*.der
-
-## Key database file
-*.kdb
-
-## OSCP request data
-*.org
-
-## PKCS #12
-*.p12
-
-## PEM-encoded certificate data
-*.pem
-
-## Random number seed
-*.rnd
-
-## SSLeay data
-*.ssleay
-
-## S/MIME message
-*.smime
-
-# ide
-.idea/
-
-# others
-migrations/
+# Especiales del proyecto
+services/
 
 # BBDD
 *.db
