--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-# # Configuracion APP
-# APP_NAME="Flask API Rest Template"
-# APP_ENV="develop"
+# Configuracion APP
+APP_NAME="Flask API Rest Template"
+APP_ENV="develop"
 
-# # Configuracion Flask
-# FLASK_APP= "app:app"
-# FLASK_ENV="development"
-# APP_SETTINGS_MODULE="config.DevelopConfig"
-# APP_TEST_SETTINGS_MODULE="config.TestingConfig"
-# FLASK_RUN_HOST="0.0.0.0"
+# Configuracion Flask
+FLASK_APP= "app:app"
+FLASK_ENV="development"
+APP_SETTINGS_MODULE="config.DevelopConfig"
+APP_TEST_SETTINGS_MODULE="config.TestingConfig"
+FLASK_RUN_HOST="0.0.0.0"
 
-# # Configuracion de servicio BBDD
-# DATABASE_URL="sqlite:///develop.db"
-# DATABASE_TEST_URL="sqlite:///testing.db"
+# Configuracion de servicio BBDD
+DATABASE_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_demo
+DATABASE_TEST_URL="sqlite:///testing.db"
