--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ apispec==6.3.0
 asttokens==2.2.1
 backcall==0.2.0
 blinker==1.5
+certifi==2023.5.7
 click==8.1.3
 colorama==0.4.6
 comm==0.1.2
 debugpy==1.6.4
 decorator==5.1.1
+distlib==0.3.6
 entrypoints==0.4
 executing==1.2.0
+filelock==3.12.2
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
@@ -19,6 +22,8 @@ Flask-Script==2.0.5
 flask-smorest==0.40.0
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
+gunicorn==20.1.0
+importlib-metadata==6.7.0
 ipykernel==6.19.2
 ipython==8.7.0
 itsdangerous==2.1.2
@@ -34,15 +39,19 @@ nest-asyncio==1.5.6
 packaging==22.0
 parso==0.8.3
 passlib==1.7.4
+pexpect==4.8.0
 pickleshare==0.7.5
-platformdirs==2.6.0
+pipenv==2023.7.3
+platformdirs==3.8.0
 prompt-toolkit==3.0.36
 psutil==5.9.4
-# psycopg2==2.9.5
-psycopg2-binary
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.13.0
 PyJWT==2.6.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 pyzmq==24.0.1
 six==1.16.0
 SQLAlchemy==2.0.7
@@ -50,9 +59,10 @@ stack-data==0.6.2
 tornado==6.2
 traitlets==5.7.1
 typing_extensions==4.5.0
+virtualenv==20.23.1
+virtualenv-clone==0.5.7
 wcwidth==0.2.5
 webargs==8.2.0
 Werkzeug==2.2.3
 wincertstore==0.2
-gunicorn
-python-dotenv
+zipp==3.15.0
