--- a/.env.api.local
+++ b/.env.api.local
@@ -1,17 +1,17 @@
-# Configuracion APP
+# APP configuration
 APP_NAME=Flask API Rest Template
 APP_ENV=local
 
-# Configuracion Flask
+# Flask Configuration
 API_ENTRYPOINT=app:app
 APP_SETTINGS_MODULE=config.LocalConfig
 APP_TEST_SETTINGS_MODULE=config.TestingConfig
 
-# Configuracion de servicio API
+# API service configuration
 API_HOST=0.0.0.0
 API_PORT=5000
 
-# Configuracion de servicio BBDD
+# Database service configuration
 BBDD_HOST=db
 BBDD_PORT=5432
 DATABASE=postgres
