--- a/.env.cron.local
+++ b/.env.cron.local
@@ -1,30 +1,30 @@
-# Configuracion de servicio BBDD backups
+# Database service configuration backups
 
-# Usuario para acceder al servidor bbdd, ejemplo root
+# User to access the database server, for example, root
 BBDD_USER=db_user
 
-# Password para acceder a la bbdd postgresql
+# Password to access the PostgreSQL database
 PGPASSWORD=db_password
 
-# Host name (o IP address) de PostgreSQL server, ejemplo localhost
+# Hostname (or IP address) of the PostgreSQL server, for example, localhost
 BBDD_HOST=db
 
-# Port de PostgreSQL server, ejemplo 5432
+# Port of the PostgreSQL server, for example, 5432
 BBDD_PORT=5432
 
-# Tipo de bbdd
+# Database type
 DATABASE=postgres
 
-# List of DBNAMES for Daily/Weekly Backup e.g. "DB1 DB2 DB3"
+# List of DBNAMES for Daily/Weekly Backup, for example, "DB1 DB2 DB3"
 BACKUPS_DBNAMES=all
 
-# Backup directory location e.g /backups
+# Backup directory location, for example, /backups
 BACKUPS_BACKUPDIR=/var/backups/postgres
 
 # LOG directory location
 BACKUPS_LOGDIR=/var/log
 
-# List of DBNAMES to EXLUCDE if DBNAMES are set to all (must be in " quotes)
+# List of DBNAMES to EXCLUDE if DBNAMES are set to all (must be in "quotes")
 BACKUPS_DBEXCLUDE=db_test root postgres template0 template1
 
 # Include CREATE DATABASE in backup?
