--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ APP_TEST_SETTINGS_MODULE="config.TestingConfig"
 FLASK_RUN_HOST="0.0.0.0"
 
 # Database service configuration
-DATABASE_URL="postgresql+psycopg2://db_user:db_password@db_service:5432/db_demo"
-DATABASE_TEST_URL="sqlite:///testing.db"
+DATABASE_URL="postgresql://db_user:db_password@localhost/db_dev"
+DATABASE_TEST_URL="postgresql://db_user:db_password@localhost/db_test"
