--- a/.env.api.local
+++ b/.env.api.local
@@ -16,4 +16,4 @@ BBDD_HOST=db
 BBDD_PORT=5432
 DATABASE=postgres
 DATABASE_TEST_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_test
-DATABASE_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_demo
+DATABASE_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_dev
