--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ FLASK_ENV="development"
 APP_SETTINGS_MODULE="config.DevelopConfig"
 APP_TEST_SETTINGS_MODULE="config.TestingConfig"
 FLASK_RUN_HOST="0.0.0.0"
+FLASK_RUN_PORT="3000"
 
 # Database service configuration
 DATABASE_URL="postgresql://db_user:db_password@localhost/db_dev"
