UPDATE nmap to check connect db

--- a/.env.api.local
+++ b/.env.api.local
@@ -12,7 +12,7 @@ API_HOST=0.0.0.0
 API_PORT=5000
 
 # Database service configuration
-BBDD_HOST=db
+BBDD_HOST=db_service
 BBDD_PORT=5432
 DATABASE=postgres
 DATABASE_TEST_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_test
