--- a/.env.cron.local
+++ b/.env.cron.local
@@ -7,7 +7,7 @@ BBDD_USER=db_user
 PGPASSWORD=db_password
 
 # Hostname (or IP address) of the PostgreSQL server, for example, localhost
-BBDD_HOST=db
+BBDD_HOST=db_service
 
 # Port of the PostgreSQL server, for example, 5432
 BBDD_PORT=5432
