--- a/.env.api.local
+++ b/.env.api.local
@@ -12,8 +12,12 @@ API_HOST=0.0.0.0
 API_PORT=5000
 
 # Database service configuration
+DATABASE=postgres
 BBDD_HOST=db_service
 BBDD_PORT=5432
-DATABASE=postgres
+POSTGRES_DB=db_dev
+POSTGRES_USER=db_user
+PGPASSWORD=db_password
+
 DATABASE_TEST_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_test
 DATABASE_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_dev
