--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2023.5.7
 click==8.1.3
 colorama==0.4.6
 comm==0.1.2
+coverage==7.2.7
 debugpy==1.6.4
 decorator==5.1.1
 distlib==0.3.6
@@ -25,7 +26,7 @@ greenlet==2.0.2
 gunicorn==20.1.0
 importlib-metadata==6.7.0
 ipykernel==6.19.2
-ipython==8.10
+ipython==8.10.0
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
