--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -1,8 +1,40 @@
-name: hello-world
-on: push
+name: development
+on: 
+  pull_request:
+    branches: develop
+
+  push:
+    branches:
+      - develop
 jobs:
-  my-job:
+  build-test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13.3
+        env:
+          POSTGRES_USER: db_user
+          POSTGRES_PASSWORD: db_password
+          POSTGRES_DB: db_test
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-      - name: my-step
-        run: echo "Hello World with Github Actions"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Python dependencies
+        run: python -m pip install -r requirements.txt
+
+      - name: Unit Tests
+        env:
+          DATABASE_TEST_URL: postgresql://db_user:db_password@postgres:5432/db_test
+        run: python -m unittest discover -p '*_unit.py'
+        
