--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -25,6 +25,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Cache Python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      
+      - name: Copy environment file
+        run: cp .env $GITHUB_WORKSPACE/.env
+
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -36,12 +47,5 @@ jobs:
       - name: Unit Tests
         env:
           DATABASE_TEST_URL: postgresql://db_user:db_password@postgres:5432/db_test
-          APP_NAME: "Flask API Rest Template"
-          APP_ENV: "develop"
-          FLASK_APP: "app:app"
-          FLASK_DEBUG: "true"
-          APP_SETTINGS_MODULE: "config.TestingConfig"
-          FLASK_RUN_HOST: "0.0.0.0"
-          FLASK_RUN_PORT: "5000"
         run: python -m unittest discover -p '*_unit.py'
         
