--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -18,8 +18,6 @@ jobs:
           POSTGRES_DB: db_test
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout code
@@ -43,7 +41,7 @@ jobs:
 
       - name: Unit Tests
         env:
-          DATABASE_TEST_URL: postgresql://db_user:db_password@postgres:5432/db_test
+          DATABASE_TEST_URL: "postgresql://db_user:db_password@postgres:5432/db_test"
           APP_NAME: "Flask API Rest Template"
           APP_ENV: "develop"
           FLASK_APP: "app:app"
