--- a/.github/workflows/staging_pipeline.yaml
+++ b/.github/workflows/staging_pipeline.yaml
@@ -1,5 +1,7 @@
-name: hello-world
-on: push
+name: staging
+on: 
+  pull_request:
+    branches: staging
 jobs:
   my-job:
     runs-on: ubuntu-latest
