--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -49,5 +49,5 @@ jobs:
           APP_TEST_SETTINGS_MODULE: "config.TestingConfig"
           FLASK_RUN_HOST: "0.0.0.0"
           FLASK_RUN_PORT: "5000"
-        run: python -m unittest discover -p '*_unit.py'
+        run: python -m flask run
         
