--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -18,7 +18,6 @@ jobs:
           POSTGRES_DB: db_test
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - name: Checkout code
@@ -40,7 +39,7 @@ jobs:
       - name: Install Python dependencies
         run: python -m pip install -r requirements.txt
 
-      - name: Unit Tests
+      - name: Unit Tests and Integration Tests
         env:
           DATABASE_TEST_URL: postgresql://db_user:db_password@localhost/db_test
         run: python -m flask tests
