--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ Pygments==2.13.0
 PyJWT==2.6.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 pyzmq==24.0.1
 six==1.16.0
 SQLAlchemy==2.0.7
