--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -20,7 +20,7 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Cache Python dependencies
@@ -53,19 +53,26 @@ jobs:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Authenticate Docker Hub
+      - name: Login to Docker Hub
         id: docker_hub_auth
-        run: docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ env.DOCKERHUB_PASSWORD }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}  
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}     
 
-      - name: Build Docker
+      - name: Build Docker Image
         id: build_docker
-        run: docker compose build
+        run: |
+          docker compose build api_service
+          
+          # Add tag
+          docker tag api_service:latest ${{ secrets.DOCKERHUB_USERNAME }}/api_service:latest
 
-      - name: Push images to Docker Hub
+      - name: Push Docker Image
         id: push_images
-        run: docker compose push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api_service:latest
 
         
