--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -45,6 +45,7 @@ jobs:
         run: python -m flask tests
 
   deploy-service:
+    needs: build-test
     runs-on: ubuntu-latest
     env:	
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -69,10 +70,10 @@ jobs:
           docker compose build api_service
           
           # Add tag
-          docker tag api_service:latest ${{ secrets.DOCKERHUB_USERNAME }}/api_service:latest
+          docker tag api_image:latest ${{ secrets.DOCKERHUB_USERNAME }}/api_image:latest
 
       - name: Push Docker Image
         id: push_images
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api_service:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api_image:latest
 
         
