UPDATE Nginx log config

--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -76,4 +76,9 @@ jobs:
         id: push_images
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api_image:latest
 
-        
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: MyStackEC2
+          template: myStack.yaml
+          parameter-overrides: "MyParam1=myValue,MyParam2=${{ secrets.MY_SECRET_VALUE }}"
