--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,15 @@ services:
 
   nginx_service:
     container_name: nginx_container
-    image: nginx_image
+    image: nginx:1.25.1-alpine
     build:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - 8080:80
+      - 80:80
+    volumes:
+      - ./server/default.conf:/etc/nginx/conf.d/default.conf
+      - ./server/log:/var/log/nginx
     depends_on:
       - api_service
 volumes:
