--- a/server/default.conf
+++ b/server/default.conf
@@ -3,11 +3,7 @@ upstream flask-api {
 }
 
 server {
-
     listen 80;
-
-    access_log  /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log;
 
     location / {
         proxy_pass http://flask-api;
@@ -18,4 +14,8 @@ server {
         proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto    $scheme;
     }
+
+    # Log
+    access_log  /var/log/nginx/access.log;
+    error_log  /var/log/nginx/error.log;
 }
