--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -1,5 +1,5 @@
 name: development
-on: 
+on:
   pull_request:
     branches: develop
 
@@ -30,7 +30,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      
+
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -47,10 +47,10 @@ jobs:
   deploy-service:
     needs: build-test
     runs-on: ubuntu-latest
-    env:	
+    env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: "us-east-1"
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     steps:
@@ -61,14 +61,14 @@ jobs:
         id: docker_hub_auth
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}  
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}     
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build Docker Image
         id: build_docker
         run: |
           docker compose build api_service
-          
+
           # Add tag
           docker tag api_image:latest ${{ secrets.DOCKERHUB_USERNAME }}/api_image:latest
 
