--- a/.github/workflows/files/ec2.yml
+++ b/.github/workflows/files/ec2.yml
@@ -29,14 +29,14 @@ Parameters:
     Type: String
     Default: "ami-053b0d53c279acc90"
 
-Resources: 
+Resources:
   VPC:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: !Ref VpcCIDR
       EnableDnsHostnames: true
       EnableDnsSupport: true
-      Tags: 
+      Tags:
         - Key: Name
           Value: "Main VPC"
 
@@ -56,10 +56,10 @@ Resources:
   PublicSubnet:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: 'us-east-1a'
+      AvailabilityZone: "us-east-1a"
       VpcId: !Ref VPC
       CidrBlock: !Ref PublicSubnetCIDR
-      Tags: 
+      Tags:
         - Key: Name
           Value: "Public Subnet AZ1"
 
@@ -67,7 +67,7 @@ Resources:
     Type: AWS::EC2::RouteTable
     Properties:
       VpcId: !Ref VPC
-      Tags: 
+      Tags:
         - Key: Name
           Value: "Public Route Table"
 
@@ -81,9 +81,9 @@ Resources:
     Type: AWS::EC2::Route
     DependsOn: AttachGateway
     Properties:
-        RouteTableId: !Ref PublicRouteTable
-        DestinationCidrBlock: '0.0.0.0/0'
-        GatewayId: !Ref InternetGateway
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: "0.0.0.0/0"
+      GatewayId: !Ref InternetGateway
 
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -121,24 +121,24 @@ Resources:
         - Key: Name
           Value: SecurityGroup
 
-# Server EC2 Instance
-  ServerInstance: 
+  # Server EC2 Instance
+  ServerInstance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: !Ref InstanceType
       ImageId: !Ref AMItoUse
       KeyName: !Ref KeyPairName
-      NetworkInterfaces: 
+      NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeviceIndex: "0"
-          GroupSet: 
-            - !Ref SecurityGroup 
+          GroupSet:
+            - !Ref SecurityGroup
           SubnetId: !Ref PublicSubnet
-      BlockDeviceMappings: 
-      - DeviceName: "/dev/sdk"
-        Ebs: 
-          VolumeSize: 20
-      # UserData:   
+      BlockDeviceMappings:
+        - DeviceName: "/dev/sdk"
+          Ebs:
+            VolumeSize: 20
+      # UserData:
       #   Fn::Base64: !Sub |
       #     #!/bin/bash
       #     sudo apt-get update -y
@@ -149,10 +149,10 @@ Resources:
       #     echo \
       #     "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
       #     "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-      #     sudo tee /etc/apt/sources.list.d/docker.list > /dev/null  
+      #     sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
       #     sudo apt-get update -y
       #     apt-get install -y docker-ce
-      #     docker run -p 80:8080 tomcat:8.0  
+      #     docker run -p 80:8080 tomcat:8.0
       Tags:
         - Key: Name
           Value: ServerInstance
