--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.10.2
 apispec==6.3.0
 asttokens==2.2.1
 backcall==0.2.0
+black==23.9.1
 blinker==1.5
 certifi==2023.5.7
 click==8.1.3
@@ -14,6 +15,7 @@ distlib==0.3.6
 entrypoints==0.4
 executing==1.2.0
 filelock==3.12.2
+flake8==6.1.0
 Flask==2.2.5
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
@@ -27,6 +29,7 @@ gunicorn==20.1.0
 importlib-metadata==6.7.0
 ipykernel==6.19.2
 ipython==8.10.0
+isort==5.12.0
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
