--- a/.github/workflows/production_pipeline.yaml
+++ b/.github/workflows/production_pipeline.yaml
@@ -47,6 +47,25 @@ jobs:
           DATABASE_TEST_URL: postgresql://db_user:db_password@localhost/db_test
         run: python -m flask tests
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        id: docker_hub_auth
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_template_image:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   create-config-infrastructure:
     runs-on: ubuntu-latest
     needs:
