--- a/.github/workflows/ansible/deploy_applications.yml
+++ b/.github/workflows/ansible/deploy_applications.yml
@@ -9,8 +9,8 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
-    - api_image_image: vectornguyen76/flask_template_image
-    - api_image_tag: latest
+    - flask_template_image: vectornguyen76/flask_template_image
+    - flask_template_tag: latest
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
