Update config env

--- a/.env.api.local
+++ b/.env.api.local
@@ -19,5 +19,9 @@ POSTGRES_DB=db_dev
 POSTGRES_USER=db_user
 PGPASSWORD=db_password
 
+# Secret key
+SECRET_KEY=<your-secret-key>
+JWT_SECRET_KEY=<your-jwt-secret-key>
+
 DATABASE_TEST_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_test
 DATABASE_URL=postgresql+psycopg2://db_user:db_password@db_service:5432/db_dev
