--- a/.env
+++ b/.env
@@ -1,15 +1,19 @@
 # APP configuration
-APP_NAME="Flask API Rest Template"
-APP_ENV="develop"
+APP_NAME=Flask API Rest Template
+APP_ENV=develop
 
 # Flask Configuration
-FLASK_APP= "app:app"
-FLASK_DEBUG="true"
-APP_SETTINGS_MODULE="config.DevelopConfig"
-APP_TEST_SETTINGS_MODULE="config.TestingConfig"
-FLASK_RUN_HOST="0.0.0.0"
-FLASK_RUN_PORT="5000"
+FLASK_APP=app:app
+FLASK_DEBUG=true
+APP_SETTINGS_MODULE=config.DevelopConfig
+APP_TEST_SETTINGS_MODULE=config.TestingConfig
+FLASK_RUN_HOST=0.0.0.0
+FLASK_RUN_PORT=5000
+
+# Secret key
+SECRET_KEY=<your-secret-key>
+JWT_SECRET_KEY=<your-jwt-secret-key>
 
 # Database service configuration
-DATABASE_URL="postgresql://db_user:db_password@localhost/db_dev"
-DATABASE_TEST_URL="postgresql://db_user:db_password@localhost/db_test"
+DATABASE_URL=postgresql://db_user:db_password@localhost/db_dev
+DATABASE_TEST_URL=postgresql://db_user:db_password@localhost/db_test
