--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .env.api.local
     ports:
       - 5000:5000
+    volumes:
+      - ./logs:/app/logs
     depends_on:
       - db_service
 
@@ -29,8 +31,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./server/default.conf:/etc/nginx/conf.d/default.conf
-      - ./server/log:/var/log/nginx
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/log:/var/log/nginx
     depends_on:
       - api_service
 volumes:
