--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,13 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 matplotlib-inline==0.1.6
+mccabe==0.7.0
+mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 packaging==22.0
 parso==0.8.3
 passlib==1.7.4
+pathspec==0.12.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pipenv==2023.7.3
@@ -51,6 +54,8 @@ psutil==5.9.4
 psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.11.1
+pyflakes==3.1.0
 Pygments==2.13.0
 PyJWT==2.6.0
 python-dateutil==2.8.2
@@ -60,6 +65,7 @@ pyzmq==24.0.1
 six==1.16.0
 SQLAlchemy==2.0.7
 stack-data==0.6.2
+tomli==2.0.1
 tornado==6.3.2
 traitlets==5.7.1
 typing_extensions==4.5.0
